[package]
name = "markdown-preview-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
pulldown-cmark = "0.13.4"
syntect = "5.3.0"
resvg = "0.47.0"
tiny-skia = "0.12.0"
fontdb = "0.23.0"
fontdb16 = { package = "fontdb", version = "0.16" }
cosmic-text = "0.12"
chrono = "0.4"
mathjax-svg-rs = "0.4.0"
